--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-  "name": "react-client-prototype",
+  "name": "tracker",
   "version": "1.0.0",
-  "description": "A starter project for Client-side Reactjs applications, using babel and webpack.",
+  "description": "A simple web application to track daily habits",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "devbuild": "webpack -d --watch",
     "prodbuild": "webpack -p",
-    "start": "pushd ./src/; python -m SimpleHTTPServer; popd;"
+    "start": "pushd ./src/; python -m SimpleHTTPServer 9999; popd;"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/theCodeBear/React-Client-Prototype.git"
+    "url": ""
   },
-  "keywords": [
-    "React",
-    "Webpack",
-    "Babel",
-    "Starter"
-  ],
+  "keywords": [],
   "author": "Todd Kronenberg <toddkronenberg@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/theCodeBear/React-Client-Prototype/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/theCodeBear/React-Client-Prototype#readme",
+  "homepage": "",
   "dependencies": {
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
@@ -34,6 +29,7 @@
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-router": "^2.7.0",
+    "redux": "^3.6.0",
     "webpack": "^1.13.2"
   }
 }
