--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "^0.26.0",
     "history": "2.0.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-router": "^2.7.0",
     "redux": "^3.6.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   }
 }
