--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^0.26.0",
     "d3": "^4.3.0",
     "history": "2.0.0",
+    "moment": "^2.16.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-router": "^2.7.0",
